[gd_scene load_steps=4 format=2]

[ext_resource path="res://world/utils/graphics/FadeModulate.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/GameWorld.gd" type="Script" id=2]
[ext_resource path="res://world/environments/dock/DockEnvironment.tscn" type="PackedScene" id=3]

[node name="GameWorld" type="Node2D"]
script = ExtResource( 2 )

[node name="FadeModulate" parent="." instance=ExtResource( 1 )]
target_node = NodePath("..")

[node name="Contents" type="Node2D" parent="."]

[node name="DockEnvironment" parent="Contents" instance=ExtResource( 3 )]
